<resources>
    <string name="app_name">NewsFeed</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="home">Welcome to NewsFeed</string>
    <string name="bbc_news">BBC NEWS</string>
    <string name="save">Save</string>
    <string name="view_favourites">View Favourites</string>
    <string name="news_feeds">News Feeds</string>
    <string name="contact_newsfeed_com">contact@newsFeed.com</string>
    <string name="enter_url">Enter Url</string>
    <string name="get_feeds">Get Feeds</string>
    <string name="choose_your_language">Choose your Language</string>
    <string name="canadian_french">Canadian French</string>
    <string name="title">Title</string>
    <string name="discription">Discription</string>
    <string name="date">Date</string>
    <string name="link">Link</string>
    <string name="delete">Delete</string>
    <string name="logout">Logout!</string>
    <string name="english">English</string>
    <string name="canadian">Canadian French</string>

    <string name="feeds_list">Feeds List</string>
    <string name="saved_feed_list">Saved Feed List</string>
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>
</resources>