<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity"
    android:orientation="vertical">
    <include
        layout="@layout/actionbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_centerInParent="true"
     >
        <EditText
            android:id="@+id/edt_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_url"
            android:layout_gravity="center_vertical"
            android:layout_margin="10dp"
            android:background="@drawable/bg_rounded"
            android:padding="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="15dp"
            android:gravity="center">
            <Button
                android:id="@+id/btn_getFeeds"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:text="@string/get_feeds"
                android:layout_weight="1"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="7.5dp"
                android:backgroundTint="@color/app_color"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_viewFeeds"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:text="@string/view_favourites"
                android:layout_weight="1"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="7.5dp"
                android:backgroundTint="@color/app_color"
                android:textColor="@color/white"/>

        </LinearLayout>
    </LinearLayout>




</RelativeLayout>